Issue-148 Collapse block is wider on Franklin (#149)
* Issue-148 Collapse block is wider on Franklin

* Issue-148 Review Comments changes

---------

--- a/blocks/collapse/collapse.css
+++ b/blocks/collapse/collapse.css
@@ -21,6 +21,12 @@
   }
 }
 
+@media (min-width: 102rem) {
+  .collapse-container {
+      max-width: 71.5rem !important;
+  }
+}
+
 .collapse > div:nth-child(1) {
   margin-bottom: var(--spacing-vertical-s);
   text-align: left;
